1.5.23.dev0
 * #394: Compact repository segments and free space with new "borgmatic compact" action. Borg 1.2+
   only. Also run "compact" by default when no actions are specified, as "prune" in Borg 1.2 no
   longer frees up space unless "compact" is run.
 * #394: When the "atime" option is used, tailor the flags passed to Borg depending on version.
 * #480, #482: Fix traceback when a YAML validation error occurs.

1.5.22
 * #288: Add database dump hook for MongoDB.
 * #470: Move mysqldump options to the beginning of the command due to MySQL bug 30994.
 * #471: When command-line configuration override produces a parse error, error cleanly instead of
   tracebacking.
 * #476: Fix unicode error when restoring particular MySQL databases.
 * Drop support for Python 3.6, which has been end-of-lifed.
 * Add support for Python 3.10.

1.5.21
 * #28: Optionally retry failing backups via "retries" and "retry_wait" configuration options.
 * #306: Add "list_options" MySQL configuration option for passing additional arguments to MySQL
   list command.
 * #459: Add support for old version (2.x) of jsonschema library.

1.5.20
 * Re-release with correct version without dev0 tag.

1.5.19
 * #387: Fix error when configured source directories are not present on the filesystem at the time
   of backup. Now, Borg will complain, but the backup will still continue.
 * #455: Mention changing borgmatic path in cron documentation.
 * Update sample systemd service file with more granular read-only filesystem settings.
 * Move Gitea and GitHub hosting from a personal namespace to an organization for better
   collaboration with related projects.
 * 1k ★s on GitHub!

1.5.18
 * #389: Fix "message too long" error when logging to rsyslog.
 * #440: Fix traceback that can occur when dumping a database.

1.5.17
 * #437: Fix error when configuration file contains "umask" option.
 * Remove test dependency on vim and /dev/urandom.

1.5.16